Reference image change

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <![endif]-->
 </head>
 <body>
+<img src="/home/mgomez/Escritorio/AppConnectedToDB/imagenes/logo.png">
 <header>
 <h1>InitialApply Blog</h1>
 </header>
